fix(Model): внесены изменения в классы библиотеки fix(Lab3): внесены изменения в метод Main и класс ConsoleInput

--- a/Lab3/Model/Model.csproj
+++ b/Lab3/Model/Model.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="CapacitorBase.cs" />
     <Compile Include="CylindricalCapacitor.cs" />
-    <Compile Include="ModelCheck.cs" />
+    <Compile Include="ModelChecker.cs" />
     <Compile Include="PlateCapacitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SphericalCapacitor.cs" />
