--- a/Lab2/Lab2/Lab2.csproj
+++ b/Lab2/Lab2/Lab2.csproj
@@ -45,6 +45,11 @@
   <ItemGroup>
     <Compile Include="LabTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <Compile Include="RandomPerson.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,7 +61,12 @@
       <Name>ClassLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\CompaniesNames.txt" />
     <Content Include="Resources\FirstNamesAndGenders.txt" />
